--- a/WeatherApp/View/Base.lproj/LaunchScreen.storyboard
+++ b/WeatherApp/View/Base.lproj/LaunchScreen.storyboard
@@ -22,14 +22,17 @@
                                 <rect key="frame" x="67" y="213" width="240" height="240"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="240" id="1v8-1U-yqB"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="240" id="4Qg-Gp-amg"/>
                                     <constraint firstAttribute="height" constant="240" id="poS-EQ-YYx"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="240" id="qQV-le-mte"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WeatherApp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Znn-o3-ZVN">
                                 <rect key="frame" x="67" y="465" width="240" height="50.5"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50.5" id="7F9-R4-5Mo"/>
-                                    <constraint firstAttribute="width" constant="240" id="bpx-He-oTh"/>
+                                    <constraint firstAttribute="width" constant="240" id="HVg-Me-GIL"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50.5" id="UKS-c9-LdI"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                 <color key="textColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
