--- a/WeatherApp/View/Base.lproj/LaunchScreen.storyboard
+++ b/WeatherApp/View/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,50 +15,31 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="WeatherApp" translatesAutoresizingMaskIntoConstraints="NO" id="wiP-GM-Sug">
-                                <rect key="frame" x="67" y="213" width="240" height="240"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="1v8-1U-yqB"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="240" id="4Qg-Gp-amg"/>
-                                    <constraint firstAttribute="height" constant="240" id="poS-EQ-YYx"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="240" id="qQV-le-mte"/>
-                                </constraints>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" fixedFrame="YES" image="WeatherApp" translatesAutoresizingMaskIntoConstraints="NO" id="wiP-GM-Sug">
+                                <rect key="frame" x="79" y="240" width="256" height="256"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WeatherApp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Znn-o3-ZVN">
-                                <rect key="frame" x="67" y="465" width="240" height="50.5"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50.5" id="7F9-R4-5Mo"/>
-                                    <constraint firstAttribute="width" constant="240" id="HVg-Me-GIL"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50.5" id="UKS-c9-LdI"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
-                                <color key="textColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="WeatherApp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Znn-o3-ZVN">
+                                <rect key="frame" x="118" y="525" width="178" height="51"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="33"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="wiP-GM-Sug" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="Aab-lz-pZK"/>
-                            <constraint firstItem="wiP-GM-Sug" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="193" id="RB4-VZ-8cS"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Znn-o3-ZVN" secondAttribute="bottom" constant="151.5" id="YGD-fH-hYj"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wiP-GM-Sug" secondAttribute="trailing" constant="68" id="dDu-dp-35q"/>
-                            <constraint firstItem="Znn-o3-ZVN" firstAttribute="top" secondItem="wiP-GM-Sug" secondAttribute="bottom" constant="12" id="jpI-s5-KWQ"/>
-                            <constraint firstItem="Znn-o3-ZVN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="lVU-uF-FUq"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Znn-o3-ZVN" secondAttribute="trailing" constant="68" id="t1b-gQ-Tzo"/>
-                            <constraint firstItem="Znn-o3-ZVN" firstAttribute="top" secondItem="wiP-GM-Sug" secondAttribute="bottom" constant="12" id="zkb-kw-YOe"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52" y="374.66266866566718"/>
+            <point key="canvasLocation" x="50.399999999999999" y="373.76311844077964"/>
         </scene>
     </scenes>
     <resources>
-        <image name="WeatherApp" width="256" height="256"/>
+        <image name="WeatherApp" width="170" height="170"/>
     </resources>
 </document>
